# libjingle

./: .gitmodules  CMakeLists.txt  README.md  prosody.patch
examples/: CMakeLists.txt
examples/call/: call_main.cc  call_unittest.cc  callclient.cc  callclient.h  callclient_unittest.cc  console.cc  friendinvitesendtask.cc  friendinvitesendtask.h  mediaenginefactory.cc  muc.h  mucinviterecvtask.cc  mucinviterecvtask.h  mucinvitesendtask.cc  mucinvitesendtask.h  presencepushtask.cc  presencepushtask.h
examples/camera/: camera.cc
examples/gtk/: gtk.cc
examples/login/: login_main.cc
examples/pcp/: pcp_main.cc
examples/peerconnection/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/plus/: libjingleplus.cc  libjingleplus.h  presencepushtask.cc  presencepushtask.h  rostertask.h
include/base/: asyncpacketsocket.h  asynctcpsocket.h  asyncudpsocket.h  autodetectproxy.h  basicpacketsocketfactory.h  bytebuffer.h  common.h  cpumonitor.h  criticalsection.h  httpcommon-inl.h  ipaddress.h  latebindingsymboltable.h  latebindingsymboltable.h.def  libdbusglibsymboltable.h  linux.h  nssidentity.h  opensslidentity.h  proxydetect.h  (+17 more)
src/: CMakeLists.txt
src/app/webrtc/: audiotrack.cc  datachannel.cc  dtmfsender.cc  jsepsessiondescription.cc  localaudiosource.cc  localvideosource.cc  mediastream.cc  mediastreamhandler.cc  mediastreamproxy.cc  mediastreamsignaling.cc  mediastreamtrackproxy.cc  peerconnection.cc  peerconnectionfactory.cc  peerconnectionproxy.cc  portallocatorfactory.cc  statscollector.cc  videosourceproxy.cc  webrtcsdp.cc  webrtcsession.cc
src/app/webrtc/test/: fakeaudiocapturemodule.cc
src/base/: asynctcpsocket.cc  asyncudpsocket.cc  autodetectproxy.cc  basicpacketsocketfactory.cc  bytebuffer.cc  common.cc  cpumonitor.cc  dbus.cc  fileutils.cc  firewallsocketserver.cc  helpers.cc  httpbase.cc  ipaddress.cc  linux.cc  linuxwindowpicker.cc  macwindowpicker.cc  md5.cc  messagequeue.cc  natserver.cc  network.cc  nssidentity.cc  nssstreamadapter.cc  openssladapter.cc  opensslidentity.cc  opensslstreamadapter.cc  physicalsocketserver.cc  proxydetect.cc  socketadapters.cc  socketaddress.cc  ssladapter.cc  sslidentity.cc  systeminfo.cc  testclient.cc  thread.cc  timeutils.cc  unixfilesystem.cc  win32socketserver.cc  win32windowpicker.cc  winping.cc
src/media/base/: capturemanager.cc  capturerenderadapter.cc  codec.cc  constants.cc  cpuid.cc  hybridvideoengine.cc  mediaengine.cc  rtpdataengine.cc  rtputils.cc  streamparams.cc  videoadapter.cc  videocapturer.cc  videocommon.cc  videoframe.cc
src/media/devices/: devicemanager.cc  filevideocapturer.cc  gtkvideorenderer.cc  iosdeviceinfo.cc  linuxdeviceinfo.cc  linuxdevicemanager.cc  macdeviceinfo.cc  win32deviceinfo.cc
src/media/webrtc/: webrtcpassthroughrender.cc  webrtcvideocapturer.cc  webrtcvideoengine.cc  webrtcvideoframe.cc  webrtcvoiceengine.cc
src/p2p/base/: constants.cc  dtlstransportchannel.cc  p2ptransport.cc  p2ptransportchannel.cc  port.cc  portallocator.cc  portallocatorsessionproxy.cc  portproxy.cc  pseudotcp.cc  rawtransport.cc  rawtransportchannel.cc  relayport.cc  relayserver.cc  session.cc  sessiondescription.cc  sessionmanager.cc  sessionmessages.cc  stun.cc  stunport.cc  stunrequest.cc  tcpport.cc  transport.cc  transportchannel.cc  transportchannelproxy.cc  turnport.cc  turnserver.cc  turnserver_main.cc
src/p2p/client/: basicportallocator.cc  connectivitychecker.cc
src/session/media/: call.cc  channel.cc  channelmanager.cc  mediamessages.cc  mediasession.cc  mediasessionclient.cc  srtpfilter.cc  ssrcmuxfilter.cc  typingmonitor.cc
src/session/tunnel/: securetunnelsessionclient.cc  tunnelsessionclient.cc
tests/: CMakeLists.txt
tests/app/webrtc/: dtmfsender_unittest.cc  jsepsessiondescription_unittest.cc  localaudiosource_unittest.cc  localvideosource_unittest.cc  mediastream_unittest.cc  mediastreamhandler_unittest.cc  mediastreamsignaling_unittest.cc  peerconnection_unittest.cc  peerconnectionfactory_unittest.cc  peerconnectioninterface_unittest.cc  peerconnectionproxy_unittest.cc  statscollector_unittest.cc  webrtcsdp_unittest.cc  webrtcsession_unittest.cc
tests/app/webrtc/test/: fakeaudiocapturemodule_unittest.cc
tests/base/: asynchttprequest_unittest.cc  basictypes_unittest.cc  httpbase_unittest.cc  httpcommon_unittest.cc  ipaddress_unittest.cc  latebindingsymboltable_unittest.cc  linux_unittest.cc  messagequeue_unittest.cc  multipart_unittest.cc  nat_unittest.cc  network_unittest.cc  physicalsocketserver_unittest.cc  proxydetect_unittest.cc  rollingaccumulator_unittest.cc  signalthread_unittest.cc  socket_unittest.cc  socketaddress_unittest.cc  sslidentity_unittest.cc  sslstreamadapter_unittest.cc  stringencode_unittest.cc  thread_unittest.cc  timeutils_unittest.cc  win32socketserver_unittest.cc  windowpicker_unittest.cc
tests/media/base/: capturemanager_unittest.cc  codec_unittest.cc  filemediaengine_unittest.cc  rtpdataengine_unittest.cc  rtputils_unittest.cc  testutils.cc  videocapturer_unittest.cc  videocommon_unittest.cc
tests/media/devices/: devicemanager_unittest.cc
tests/media/webrtc/: webrtcpassthroughrender_unittest.cc  webrtcvideoengine_unittest.cc  webrtcvideoframe_unittest.cc  webrtcvoiceengine_unittest.cc
tests/p2p/base/: dtlstransportchannel_unittest.cc  p2ptransportchannel_unittest.cc  port_unittest.cc  portallocatorsessionproxy_unittest.cc  pseudotcp_unittest.cc  relayport_unittest.cc  relayserver_unittest.cc  session_unittest.cc  stun_unittest.cc  stunport_unittest.cc  stunserver_unittest.cc  transport_unittest.cc  transportdescriptionfactory_unittest.cc  turnport_unittest.cc
tests/p2p/client/: connectivitychecker_unittest.cc  portallocator_unittest.cc
tests/session/media/: channel_unittest.cc  channelmanager_unittest.cc  mediamessages_unittest.cc  mediasession_unittest.cc  mediasessionclient_unittest.cc  srtpfilter_unittest.cc
(+107 files in other folders)
